fix alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,8 @@ p, h1, h2 {
 
 div.main {
   position: absolute;
+  top: 0px;
+  left: 0px;
   height: 100%;
   width: 100%;
   display: flex;
